put data into DataFrame

--- a/data/BooksRecommender.ipynb
+++ b/data/BooksRecommender.ipynb
@@ -11,6 +11,22 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "books = pd.read_csv(\"./BX-Books.csv\",\n",
+    "                    sep=\";\", on_bad_lines='skip', encoding=\"latin-1\")\n",
+    "books = books[['ISBN', 'Book-Title', 'Book-Author', 'Year-Of-Publication', 'Publisher', 'Image-URL-L']]\n",
+    "\n",
+    "books.rename(columns={'Book-Title':'title', 'Book-Author': 'author', \n",
+    "                    'Year-Of-Publication': 'year', 'Publisher':'publisher', 'Image-URL-L':'url'}, inplace=True)\n",
+    "\n",
+    "books"
+   ]
   }
  ],
  "metadata": {
