--- a/data/BooksRecommender.ipynb
+++ b/data/BooksRecommender.ipynb
@@ -364,10 +364,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>ISBN</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>276725</td>\n",
+       "      <td>034545104X</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>276726</td>\n",
+       "      <td>0155061224</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>276727</td>\n",
+       "      <td>0446520802</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>276729</td>\n",
+       "      <td>052165615X</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>276729</td>\n",
+       "      <td>0521795028</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1149775</th>\n",
+       "      <td>276704</td>\n",
+       "      <td>1563526298</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1149776</th>\n",
+       "      <td>276706</td>\n",
+       "      <td>0679447156</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1149777</th>\n",
+       "      <td>276709</td>\n",
+       "      <td>0515107662</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1149778</th>\n",
+       "      <td>276721</td>\n",
+       "      <td>0590442449</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1149779</th>\n",
+       "      <td>276723</td>\n",
+       "      <td>05162443314</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1149780 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             id         ISBN  rating\n",
+       "0        276725   034545104X       0\n",
+       "1        276726   0155061224       5\n",
+       "2        276727   0446520802       0\n",
+       "3        276729   052165615X       3\n",
+       "4        276729   0521795028       6\n",
+       "...         ...          ...     ...\n",
+       "1149775  276704   1563526298       9\n",
+       "1149776  276706   0679447156       0\n",
+       "1149777  276709   0515107662      10\n",
+       "1149778  276721   0590442449      10\n",
+       "1149779  276723  05162443314       8\n",
+       "\n",
+       "[1149780 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratings = pd.read_csv(\"./BX-Book-Ratings.csv\", sep=\";\", on_bad_lines='skip', encoding=\"latin-1\")\n",
+    "ratings.rename(columns={'User-ID':'id', 'Book-Rating':'rating'}, inplace=True)\n",
+    "ratings"
+   ]
   },
   {
    "cell_type": "code",
