--- a/data/BooksRecommender.ipynb
+++ b/data/BooksRecommender.ipynb
@@ -495,10 +495,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id\n",
+       "11676      True\n",
+       "198711     True\n",
+       "153662     True\n",
+       "98391      True\n",
+       "35859      True\n",
+       "          ...  \n",
+       "119573    False\n",
+       "276706    False\n",
+       "276697    False\n",
+       "276679    False\n",
+       "276676    False\n",
+       "Name: count, Length: 105283, dtype: bool"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = ratings['id'].value_counts() > 200\n",
+    "x"
+   ]
   },
   {
    "cell_type": "code",
