users who read more than 200 books

--- a/data/BooksRecommender.ipynb
+++ b/data/BooksRecommender.ipynb
@@ -528,10 +528,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([ 11676, 198711, 153662,  98391,  35859, 212898, 278418,  76352, 110973,\n",
+       "       235105,\n",
+       "       ...\n",
+       "       116122,  44296,  28634,  59727,  73681, 274808, 188951,   9856, 155916,\n",
+       "       268622],\n",
+       "      dtype='int64', name='id', length=899)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = x[x].index\n",
+    "y"
+   ]
   },
   {
    "cell_type": "code",
