--- a/data/BooksRecommender.ipynb
+++ b/data/BooksRecommender.ipynb
@@ -554,10 +554,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>ISBN</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1456</th>\n",
+       "      <td>277427</td>\n",
+       "      <td>002542730X</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1457</th>\n",
+       "      <td>277427</td>\n",
+       "      <td>0026217457</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1458</th>\n",
+       "      <td>277427</td>\n",
+       "      <td>003008685X</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1459</th>\n",
+       "      <td>277427</td>\n",
+       "      <td>0030615321</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1460</th>\n",
+       "      <td>277427</td>\n",
+       "      <td>0060002050</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1147612</th>\n",
+       "      <td>275970</td>\n",
+       "      <td>3829021860</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1147613</th>\n",
+       "      <td>275970</td>\n",
+       "      <td>4770019572</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1147614</th>\n",
+       "      <td>275970</td>\n",
+       "      <td>896086097</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1147615</th>\n",
+       "      <td>275970</td>\n",
+       "      <td>9626340762</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1147616</th>\n",
+       "      <td>275970</td>\n",
+       "      <td>9626344990</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>526356 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             id        ISBN  rating\n",
+       "1456     277427  002542730X      10\n",
+       "1457     277427  0026217457       0\n",
+       "1458     277427  003008685X       8\n",
+       "1459     277427  0030615321       0\n",
+       "1460     277427  0060002050       0\n",
+       "...         ...         ...     ...\n",
+       "1147612  275970  3829021860       0\n",
+       "1147613  275970  4770019572       0\n",
+       "1147614  275970   896086097       0\n",
+       "1147615  275970  9626340762       8\n",
+       "1147616  275970  9626344990       0\n",
+       "\n",
+       "[526356 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratings = ratings[ratings['id'].isin(y)]\n",
+    "ratings"
+   ]
   },
   {
    "cell_type": "code",
