filtered ratings merged with books

--- a/data/BooksRecommender.ipynb
+++ b/data/BooksRecommender.ipynb
@@ -684,10 +684,245 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>ISBN</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>title</th>\n",
+       "      <th>author</th>\n",
+       "      <th>year</th>\n",
+       "      <th>publisher</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>277427</td>\n",
+       "      <td>002542730X</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Politically Correct Bedtime Stories: Modern Ta...</td>\n",
+       "      <td>James Finn Garner</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>John Wiley &amp;amp; Sons Inc</td>\n",
+       "      <td>http://images.amazon.com/images/P/002542730X.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>277427</td>\n",
+       "      <td>0026217457</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Vegetarian Times Complete Cookbook</td>\n",
+       "      <td>Lucy  Moll</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>John Wiley &amp;amp; Sons</td>\n",
+       "      <td>http://images.amazon.com/images/P/0026217457.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>277427</td>\n",
+       "      <td>003008685X</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Pioneers</td>\n",
+       "      <td>James Fenimore Cooper</td>\n",
+       "      <td>1974</td>\n",
+       "      <td>Thomson Learning</td>\n",
+       "      <td>http://images.amazon.com/images/P/003008685X.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>277427</td>\n",
+       "      <td>0030615321</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Ask for May, Settle for June (A Doonesbury book)</td>\n",
+       "      <td>G. B. Trudeau</td>\n",
+       "      <td>1982</td>\n",
+       "      <td>Henry Holt &amp;amp; Co</td>\n",
+       "      <td>http://images.amazon.com/images/P/0030615321.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>277427</td>\n",
+       "      <td>0060002050</td>\n",
+       "      <td>0</td>\n",
+       "      <td>On a Wicked Dawn (Cynster Novels)</td>\n",
+       "      <td>Stephanie Laurens</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>Avon Books</td>\n",
+       "      <td>http://images.amazon.com/images/P/0060002050.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>487666</th>\n",
+       "      <td>275970</td>\n",
+       "      <td>1931868123</td>\n",
+       "      <td>0</td>\n",
+       "      <td>There's a Porcupine in My Outhouse: Misadventu...</td>\n",
+       "      <td>Mike Tougias</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>Capital Books (VA)</td>\n",
+       "      <td>http://images.amazon.com/images/P/1931868123.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>487667</th>\n",
+       "      <td>275970</td>\n",
+       "      <td>3411086211</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Die Biene.</td>\n",
+       "      <td>Sybil GrÃ?Â¤fin SchÃ?Â¶nfeldt</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>Bibliographisches Institut, Mannheim</td>\n",
+       "      <td>http://images.amazon.com/images/P/3411086211.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>487668</th>\n",
+       "      <td>275970</td>\n",
+       "      <td>3829021860</td>\n",
+       "      <td>0</td>\n",
+       "      <td>The Penis Book</td>\n",
+       "      <td>Joseph Cohen</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>Konemann</td>\n",
+       "      <td>http://images.amazon.com/images/P/3829021860.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>487669</th>\n",
+       "      <td>275970</td>\n",
+       "      <td>4770019572</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Musashi</td>\n",
+       "      <td>Eiji Yoshikawa</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>Kodansha International (JPN)</td>\n",
+       "      <td>http://images.amazon.com/images/P/4770019572.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>487670</th>\n",
+       "      <td>275970</td>\n",
+       "      <td>9626340762</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Northanger Abbey (Classic Literature with Clas...</td>\n",
+       "      <td>Jane Austen</td>\n",
+       "      <td>1996</td>\n",
+       "      <td>Naxos Audiobooks Ltd.</td>\n",
+       "      <td>http://images.amazon.com/images/P/9626340762.0...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>487671 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            id        ISBN  rating  \\\n",
+       "0       277427  002542730X      10   \n",
+       "1       277427  0026217457       0   \n",
+       "2       277427  003008685X       8   \n",
+       "3       277427  0030615321       0   \n",
+       "4       277427  0060002050       0   \n",
+       "...        ...         ...     ...   \n",
+       "487666  275970  1931868123       0   \n",
+       "487667  275970  3411086211      10   \n",
+       "487668  275970  3829021860       0   \n",
+       "487669  275970  4770019572       0   \n",
+       "487670  275970  9626340762       8   \n",
+       "\n",
+       "                                                    title  \\\n",
+       "0       Politically Correct Bedtime Stories: Modern Ta...   \n",
+       "1                      Vegetarian Times Complete Cookbook   \n",
+       "2                                                Pioneers   \n",
+       "3        Ask for May, Settle for June (A Doonesbury book)   \n",
+       "4                       On a Wicked Dawn (Cynster Novels)   \n",
+       "...                                                   ...   \n",
+       "487666  There's a Porcupine in My Outhouse: Misadventu...   \n",
+       "487667                                         Die Biene.   \n",
+       "487668                                     The Penis Book   \n",
+       "487669                                            Musashi   \n",
+       "487670  Northanger Abbey (Classic Literature with Clas...   \n",
+       "\n",
+       "                               author  year  \\\n",
+       "0                   James Finn Garner  1994   \n",
+       "1                          Lucy  Moll  1995   \n",
+       "2               James Fenimore Cooper  1974   \n",
+       "3                       G. B. Trudeau  1982   \n",
+       "4                   Stephanie Laurens  2002   \n",
+       "...                               ...   ...   \n",
+       "487666                   Mike Tougias  2002   \n",
+       "487667  Sybil GrÃ?Â¤fin SchÃ?Â¶nfeldt  1993   \n",
+       "487668                   Joseph Cohen  1999   \n",
+       "487669                 Eiji Yoshikawa  1995   \n",
+       "487670                    Jane Austen  1996   \n",
+       "\n",
+       "                                   publisher  \\\n",
+       "0                  John Wiley &amp; Sons Inc   \n",
+       "1                      John Wiley &amp; Sons   \n",
+       "2                           Thomson Learning   \n",
+       "3                        Henry Holt &amp; Co   \n",
+       "4                                 Avon Books   \n",
+       "...                                      ...   \n",
+       "487666                    Capital Books (VA)   \n",
+       "487667  Bibliographisches Institut, Mannheim   \n",
+       "487668                              Konemann   \n",
+       "487669          Kodansha International (JPN)   \n",
+       "487670                 Naxos Audiobooks Ltd.   \n",
+       "\n",
+       "                                                      url  \n",
+       "0       http://images.amazon.com/images/P/002542730X.0...  \n",
+       "1       http://images.amazon.com/images/P/0026217457.0...  \n",
+       "2       http://images.amazon.com/images/P/003008685X.0...  \n",
+       "3       http://images.amazon.com/images/P/0030615321.0...  \n",
+       "4       http://images.amazon.com/images/P/0060002050.0...  \n",
+       "...                                                   ...  \n",
+       "487666  http://images.amazon.com/images/P/1931868123.0...  \n",
+       "487667  http://images.amazon.com/images/P/3411086211.0...  \n",
+       "487668  http://images.amazon.com/images/P/3829021860.0...  \n",
+       "487669  http://images.amazon.com/images/P/4770019572.0...  \n",
+       "487670  http://images.amazon.com/images/P/9626340762.0...  \n",
+       "\n",
+       "[487671 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratings_with_books = ratings.merge(books, on='ISBN')\n",
+    "ratings_with_books"
+   ]
   },
   {
    "cell_type": "code",
