number of ratings per book

--- a/data/BooksRecommender.ipynb
+++ b/data/BooksRecommender.ipynb
@@ -926,10 +926,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>num_of_rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A Light in the Storm: The Civil War Diary of ...</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Always Have Popsicles</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Apple Magic (The Collector's series)</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Beyond IBM: Leadership Marketing and Finance ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Clifford Visita El Hospital (Clifford El Gran...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160264</th>\n",
+       "      <td>Ã?Â?ber die Pflicht zum Ungehorsam gegen den S...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160265</th>\n",
+       "      <td>Ã?Â?lpiraten.</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160266</th>\n",
+       "      <td>Ã?Â?rger mit Produkt X. Roman.</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160267</th>\n",
+       "      <td>Ã?Â?stlich der Berge.</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160268</th>\n",
+       "      <td>Ã?Â?thique en toc</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>160269 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                    title  num_of_rating\n",
+       "0        A Light in the Storm: The Civil War Diary of ...              2\n",
+       "1                                   Always Have Popsicles              1\n",
+       "2                    Apple Magic (The Collector's series)              1\n",
+       "3        Beyond IBM: Leadership Marketing and Finance ...              1\n",
+       "4        Clifford Visita El Hospital (Clifford El Gran...              1\n",
+       "...                                                   ...            ...\n",
+       "160264  Ã?Â?ber die Pflicht zum Ungehorsam gegen den S...              3\n",
+       "160265                                      Ã?Â?lpiraten.              1\n",
+       "160266                     Ã?Â?rger mit Produkt X. Roman.              1\n",
+       "160267                              Ã?Â?stlich der Berge.              1\n",
+       "160268                                  Ã?Â?thique en toc              1\n",
+       "\n",
+       "[160269 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_rating = ratings_with_books.groupby('title')['rating'].count().reset_index()\n",
+    "num_rating.rename(columns={'rating': 'num_of_rating'}, inplace=True)\n",
+    "num_rating"
+   ]
   },
   {
    "cell_type": "code",
