Books with 50 or more rating count

--- a/data/BooksRecommender.ipynb
+++ b/data/BooksRecommender.ipynb
@@ -21,7 +21,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\DELL\\AppData\\Local\\Temp\\ipykernel_15532\\655457578.py:1: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\DELL\\AppData\\Local\\Temp\\ipykernel_8036\\655457578.py:1: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  books = pd.read_csv(\"./BX-Books.csv\",\n"
      ]
     },
@@ -1045,10 +1045,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>num_of_rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>493</th>\n",
+       "      <td>1984</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>527</th>\n",
+       "      <td>1st to Die: A Novel</td>\n",
+       "      <td>162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>664</th>\n",
+       "      <td>2nd Chance</td>\n",
+       "      <td>124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>810</th>\n",
+       "      <td>4 Blondes</td>\n",
+       "      <td>71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1020</th>\n",
+       "      <td>84 Charing Cross Road</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159044</th>\n",
+       "      <td>Year of Wonders</td>\n",
+       "      <td>59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159277</th>\n",
+       "      <td>You Belong To Me</td>\n",
+       "      <td>56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159916</th>\n",
+       "      <td>Zen and the Art of Motorcycle Maintenance: An ...</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160067</th>\n",
+       "      <td>Zoya</td>\n",
+       "      <td>59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160158</th>\n",
+       "      <td>\\O\\\" Is for Outlaw\"</td>\n",
+       "      <td>105</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>742 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                    title  num_of_rating\n",
+       "493                                                  1984             76\n",
+       "527                                   1st to Die: A Novel            162\n",
+       "664                                            2nd Chance            124\n",
+       "810                                             4 Blondes             71\n",
+       "1020                                84 Charing Cross Road             54\n",
+       "...                                                   ...            ...\n",
+       "159044                                    Year of Wonders             59\n",
+       "159277                                   You Belong To Me             56\n",
+       "159916  Zen and the Art of Motorcycle Maintenance: An ...             64\n",
+       "160067                                               Zoya             59\n",
+       "160158                                \\O\\\" Is for Outlaw\"            105\n",
+       "\n",
+       "[742 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nub_rating = num_rating[num_rating['num_of_rating']>=50]\n",
+    "nub_rating"
+   ]
   },
   {
    "cell_type": "code",
