--- a/data/BooksRecommender.ipynb
+++ b/data/BooksRecommender.ipynb
@@ -1163,10 +1163,245 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>ISBN</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>title</th>\n",
+       "      <th>author</th>\n",
+       "      <th>year</th>\n",
+       "      <th>publisher</th>\n",
+       "      <th>url</th>\n",
+       "      <th>num_of_rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>277427</td>\n",
+       "      <td>002542730X</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Politically Correct Bedtime Stories: Modern Ta...</td>\n",
+       "      <td>James Finn Garner</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>John Wiley &amp;amp; Sons Inc</td>\n",
+       "      <td>http://images.amazon.com/images/P/002542730X.0...</td>\n",
+       "      <td>82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>277427</td>\n",
+       "      <td>0060930535</td>\n",
+       "      <td>0</td>\n",
+       "      <td>The Poisonwood Bible: A Novel</td>\n",
+       "      <td>Barbara Kingsolver</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>Perennial</td>\n",
+       "      <td>http://images.amazon.com/images/P/0060930535.0...</td>\n",
+       "      <td>133</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>277427</td>\n",
+       "      <td>0060934417</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Bel Canto: A Novel</td>\n",
+       "      <td>Ann Patchett</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>Perennial</td>\n",
+       "      <td>http://images.amazon.com/images/P/0060934417.0...</td>\n",
+       "      <td>108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>277427</td>\n",
+       "      <td>0061009059</td>\n",
+       "      <td>9</td>\n",
+       "      <td>One for the Money (Stephanie Plum Novels (Pape...</td>\n",
+       "      <td>Janet Evanovich</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>HarperTorch</td>\n",
+       "      <td>http://images.amazon.com/images/P/0061009059.0...</td>\n",
+       "      <td>108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>277427</td>\n",
+       "      <td>006440188X</td>\n",
+       "      <td>0</td>\n",
+       "      <td>The Secret Garden</td>\n",
+       "      <td>Frances Hodgson Burnett</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>HarperTrophy</td>\n",
+       "      <td>http://images.amazon.com/images/P/006440188X.0...</td>\n",
+       "      <td>79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61848</th>\n",
+       "      <td>275970</td>\n",
+       "      <td>1400031354</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Tears of the Giraffe (No.1 Ladies Detective Ag...</td>\n",
+       "      <td>Alexander McCall Smith</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>Anchor</td>\n",
+       "      <td>http://images.amazon.com/images/P/1400031354.0...</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61849</th>\n",
+       "      <td>275970</td>\n",
+       "      <td>1400031362</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Morality for Beautiful Girls (No.1 Ladies Dete...</td>\n",
+       "      <td>Alexander McCall Smith</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>Anchor</td>\n",
+       "      <td>http://images.amazon.com/images/P/1400031362.0...</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61850</th>\n",
+       "      <td>275970</td>\n",
+       "      <td>1573229725</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Fingersmith</td>\n",
+       "      <td>Sarah Waters</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>Riverhead Books</td>\n",
+       "      <td>http://images.amazon.com/images/P/1573229725.0...</td>\n",
+       "      <td>59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61851</th>\n",
+       "      <td>275970</td>\n",
+       "      <td>1586210661</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Me Talk Pretty One Day</td>\n",
+       "      <td>David Sedaris</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>Time Warner Audio Major</td>\n",
+       "      <td>http://images.amazon.com/images/P/1586210661.0...</td>\n",
+       "      <td>146</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61852</th>\n",
+       "      <td>275970</td>\n",
+       "      <td>1586212230</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Naked</td>\n",
+       "      <td>David Sedaris</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>Time Warner Audio Major</td>\n",
+       "      <td>http://images.amazon.com/images/P/1586212230.0...</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>59850 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           id        ISBN  rating  \\\n",
+       "0      277427  002542730X      10   \n",
+       "1      277427  0060930535       0   \n",
+       "2      277427  0060934417       0   \n",
+       "3      277427  0061009059       9   \n",
+       "4      277427  006440188X       0   \n",
+       "...       ...         ...     ...   \n",
+       "61848  275970  1400031354       0   \n",
+       "61849  275970  1400031362       0   \n",
+       "61850  275970  1573229725       0   \n",
+       "61851  275970  1586210661       9   \n",
+       "61852  275970  1586212230       0   \n",
+       "\n",
+       "                                                   title  \\\n",
+       "0      Politically Correct Bedtime Stories: Modern Ta...   \n",
+       "1                          The Poisonwood Bible: A Novel   \n",
+       "2                                     Bel Canto: A Novel   \n",
+       "3      One for the Money (Stephanie Plum Novels (Pape...   \n",
+       "4                                      The Secret Garden   \n",
+       "...                                                  ...   \n",
+       "61848  Tears of the Giraffe (No.1 Ladies Detective Ag...   \n",
+       "61849  Morality for Beautiful Girls (No.1 Ladies Dete...   \n",
+       "61850                                        Fingersmith   \n",
+       "61851                             Me Talk Pretty One Day   \n",
+       "61852                                              Naked   \n",
+       "\n",
+       "                        author  year                  publisher  \\\n",
+       "0            James Finn Garner  1994  John Wiley &amp; Sons Inc   \n",
+       "1           Barbara Kingsolver  1999                  Perennial   \n",
+       "2                 Ann Patchett  2002                  Perennial   \n",
+       "3              Janet Evanovich  1995                HarperTorch   \n",
+       "4      Frances Hodgson Burnett  1998               HarperTrophy   \n",
+       "...                        ...   ...                        ...   \n",
+       "61848   Alexander McCall Smith  2002                     Anchor   \n",
+       "61849   Alexander McCall Smith  2002                     Anchor   \n",
+       "61850             Sarah Waters  2002            Riverhead Books   \n",
+       "61851            David Sedaris  2001    Time Warner Audio Major   \n",
+       "61852            David Sedaris  2001    Time Warner Audio Major   \n",
+       "\n",
+       "                                                     url  num_of_rating  \n",
+       "0      http://images.amazon.com/images/P/002542730X.0...             82  \n",
+       "1      http://images.amazon.com/images/P/0060930535.0...            133  \n",
+       "2      http://images.amazon.com/images/P/0060934417.0...            108  \n",
+       "3      http://images.amazon.com/images/P/0061009059.0...            108  \n",
+       "4      http://images.amazon.com/images/P/006440188X.0...             79  \n",
+       "...                                                  ...            ...  \n",
+       "61848  http://images.amazon.com/images/P/1400031354.0...             84  \n",
+       "61849  http://images.amazon.com/images/P/1400031362.0...             60  \n",
+       "61850  http://images.amazon.com/images/P/1573229725.0...             59  \n",
+       "61851  http://images.amazon.com/images/P/1586210661.0...            146  \n",
+       "61852  http://images.amazon.com/images/P/1586212230.0...             53  \n",
+       "\n",
+       "[59850 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_final_rating = ratings_with_books.merge(nub_rating, on='title')\n",
+    "my_final_rating.drop_duplicates(['title', 'id'], inplace=True)\n",
+    "my_final_rating"
+   ]
   },
   {
    "cell_type": "code",
