--- a/bookRECOMMENDER.ipynb
+++ b/bookRECOMMENDER.ipynb
@@ -1672,7 +1672,7 @@
     }
    ],
    "source": [
-    "# final_rating = ratings_with_books.merge(num_rating, on='title')\n",
+    "final_rating = ratings_with_books.merge(num_rating, on='title')\n",
     "final_rating = final_rating[final_rating['num_of_rating']>=50]\n",
     "final_rating.drop_duplicates(['title', 'id'], inplace=True)\n",
     "final_rating"
