--- a/data/BooksRecommender.ipynb
+++ b/data/BooksRecommender.ipynb
@@ -1861,10 +1861,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Compressed Sparse Row sparse matrix of dtype 'float64'\n",
+       "\twith 14961 stored elements and shape (742, 888)>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.sparse import csr_matrix\n",
+    "book_sparse = csr_matrix(book_pivot)\n",
+    "book_sparse"
+   ]
   },
   {
    "cell_type": "code",
