--- a/data/BooksRecommender.ipynb
+++ b/data/BooksRecommender.ipynb
@@ -2313,10 +2313,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.         67.75691847 68.05145112 72.277244   75.81556568 76.30203143]] [[237 238 240 241 184 536]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "distance, suggestion = model.kneighbors(book_pivot.iloc[237,:].values.reshape(1,-1), n_neighbors=6)\n",
+    "print(distance, suggestion)"
+   ]
   },
   {
    "cell_type": "code",
