--- a/data/BooksRecommender.ipynb
+++ b/data/BooksRecommender.ipynb
@@ -2313,7 +2313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2327,6 +2327,29 @@
    "source": [
     "distance, suggestion = model.kneighbors(book_pivot.iloc[237,:].values.reshape(1,-1), n_neighbors=6)\n",
     "print(distance, suggestion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Harry Potter and the Chamber of Secrets (Book 2)',\n",
+      "       'Harry Potter and the Goblet of Fire (Book 4)',\n",
+      "       'Harry Potter and the Prisoner of Azkaban (Book 3)',\n",
+      "       'Harry Potter and the Sorcerer's Stone (Book 1)', 'Exclusive',\n",
+      "       'The Cradle Will Fall'],\n",
+      "      dtype='object', name='title')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(suggestion)):\n",
+    "    print(book_pivot.index[suggestion[i]])"
    ]
   },
   {
