--- a/data/BooksRecommender.ipynb
+++ b/data/BooksRecommender.ipynb
@@ -2354,10 +2354,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "books_name = book_pivot.index"
+   ]
   },
   {
    "cell_type": "code",
