artifacts directory updated

--- a/data/BooksRecommender.ipynb
+++ b/data/BooksRecommender.ipynb
@@ -2363,17 +2363,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import pickle\n",
-    "\n",
-    "os.makedirs('artifacts', exist_ok=True)\n",
-    "\n",
-    "pickle.dump(model, open('artifacts/model.pkl', 'wb'))\n",
-    "# pickle.dump(books_name, open('artifacts/books_name.pkl', 'wb'))\n",
+    "# import os\n",
+    "# import pickle\n",
+    "# \n",
+    "# os.makedirs('artifacts', exist_ok=True)\n",
+    "# \n",
+    "# pickle.dump(model, open('artifacts/model.pkl', 'wb'))\n",
+    "pickle.dump(books_name, open('artifacts/books_name.pkl', 'wb'))\n",
     "#pickle.dump(final_rating, open('artifacts/final_rating.pkl', 'wb'))\n",
     "#pickle.dump(book_pivot, open('artifacts/book_pivot.pkl', 'wb'))"
    ]
